# image_to_ascii

./: .gitignore  CMakeLists.txt
.cache/clangd/index/: hootcurses.c.6B4C92059C56005D.idx  hootcurses.c.E9E3489DC45BD4CB.idx  hootcurses.h.6F9AF41599FCDDCC.idx  hootcurses.h.76D184DE7B1658AF.idx  image.c.211874572173AD04.idx  image.h.4C8326141A4C5F38.idx  main.c.2D4AD58669D9FB06.idx  queue.c.1F7F3DF64450BE74.idx  queue.c.E9C71F21330261C6.idx  queue.h.5C8B3D505CF71BA3.idx  queue.h.9856414495E2C1BA.idx  resizable_array.c.E13FA5F5E2FB93B7.idx  resizable_array.c.E15C2BED4F8AA15F.idx  resizable_array.h.A14BE1BB6F019149.idx  resizable_array.h.F84E07419B87573E.idx  screen_surface.c.BBD4B7DB6A1639F7.idx  screen_surface.c.EFAACEBBFBAE61B4.idx  screen_surface.h.1F2656DF8E1174A6.idx  screen_surface.h.AA86D7ECD61BB128.idx  sobel.c.93BBE4D8C071F756.idx  sobel.h.42B3C3D53AEA12A5.idx  sobel_obj.h.97D921FB5A29FFEA.idx  stb_image.c.B0B66A44D6EB64F9.idx  stb_image.h.ADC7AA2FCF5DE4BF.idx  stb_image_resize2.h.D7BA4E95EB64155A.idx  stb_image_rewrite.c.7A4C2631DCC8E5B4.idx  types.c.739626B73847899D.idx  types.h.8C6B0A88BBA247EA.idx
libs/hootcurses/: CMakeLists.txt
libs/hootcurses/include/: hootcurses.h  key_handler.h  queue.h  resizable_array.h  screen_surface.h  types.h
libs/hootcurses/src/: hootcurses.c  key_handler.c  queue.c  resizable_array.c  screen_surface.c
libs/stb_image/: CMakeLists.txt
libs/stb_image/include/: stb_image.h
libs/stb_image/src/: stb_image.c
src/: image.c  image.h  img_ascii.c  img_ascii.h  main.c  sobel.c  sobel.h  sobel_obj.h  timer.c  timer.h
